Add from SKU v1

--- a/src/components/PageLayout/pagelayout.css
+++ b/src/components/PageLayout/pagelayout.css
@@ -7,10 +7,10 @@
     width: 98%;
 } */
 .pagetop {
-    min-height: 100%;
-    width: 97%;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
+    /* min-height: 100%; */
+    /* width: 97%; */
+    /* display: grid; */
+    /* grid-template-rows: auto 1fr auto; */
 }
 
 .pageheader {
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: row;
     margin-bottom: auto;
-    min-height: calc(100vh - 100px);
+    min-height: calc(100vh - 110px);
     background-color: var(--color-background);
     /* overflow-y: auto;
     overflow-x: clip; */
